--- a/course.yml
+++ b/course.yml
@@ -21,3 +21,7 @@ labs:
     title: Lab 103
     length-in-minutes: 15
     relative-path: lab-03
+  - id: 04-lab-104
+    title: Lab 104
+    length-in-minutes: 5
+    relative-path: lab-04
