--- a/course.yml
+++ b/course.yml
@@ -1,5 +1,5 @@
 title: John Smith Best Course 101
-description: Course description test
+description: Course description test from John
 
 author-ids:
   - Annel
