--- a/course.yml
+++ b/course.yml
@@ -1,5 +1,5 @@
 title: John Smith Best Course
-description: Course description test by John
+description: Course description by John
 
 author-ids:
   - Annel
