--- a/course.yml
+++ b/course.yml
@@ -1,5 +1,5 @@
-title: John Smith Best Course New Release
-description: Course description by John
+title: A webinar to introduce cloud native programming by Phlyt
+description: Another description. This is a course for testing academy and github integration
 
 author-ids:
   - Annel
