--- a/course.yml
+++ b/course.yml
@@ -1,4 +1,4 @@
-title: A webinar to introduce cloud native programming by Phlyt
+title: A webinar to introduce cloud native programming by Phlyt 1
 description: Another description. This is a course for testing academy and github integration
 
 author-ids:
