--- a/course.yml
+++ b/course.yml
@@ -1,5 +1,5 @@
 title: A webinar to introduce cloud native coding by Phlyt
-description: Another description. This is a course for testing academy and github integration
+description: Another description. This is a course for testing academy & github integration
 
 author-ids:
   - Annel
