--- a/course.yml
+++ b/course.yml
@@ -1,4 +1,4 @@
-title: A webinar to introduce cloud native coding by Phlyt
+title: A webinar to introduce cloud native coding by Phlyt.
 description: Another description. This is a course for testing academy & github integration
 
 author-ids:
