--- a/course.yml
+++ b/course.yml
@@ -1,5 +1,5 @@
 title: A webinar to introduce cloud native coding by Phlyt 2021
-description: Another description as this is a course for testing academy & github integration
+description: A description as this is a course for testing academy & github integration
 
 author-ids:
   - Annel
