--- a/course.yml
+++ b/course.yml
@@ -1,5 +1,5 @@
 title: A webinar to introduce cloud native coding by Phlyt 2021
-description: A description for testing academy & github integration
+description: A description for testing academy & github integration jul 26
 
 author-ids:
   - Annel
