--- a/course.yml
+++ b/course.yml
@@ -2,7 +2,7 @@ title: A webinar to introduce cloud native coding by Phlyt 2021
 description: A description for testing academy & github integration jul 26
 
 author-ids:
-  - Admin
+  - admin
 locale: en-CA
 difficulty: BEGINNER
 badge-color: blue
