--- a/course.yml
+++ b/course.yml
@@ -1,4 +1,4 @@
-title: A webinar to introduce cloud native coding by Phlyt 2021
+title: Test Title July 26
 description: A description for testing academy & github integration jul 26
 
 author-ids:
