--- a/course.yml
+++ b/course.yml
@@ -1,8 +1,8 @@
-title: Test Course
+title: Test Course 123
 description: GitHub mode course for Academy Enteprise demo purposes
 
 author-ids:
-  - admin
+  - Annel
 locale: en-CA
 difficulty: BEGINNER
 live: false
