--- a/course.yml
+++ b/course.yml
@@ -1,4 +1,4 @@
-title: Test Course 123
+title: GitHub Mode Course
 description: GitHub mode course for Academy Enteprise demo purposes
 
 author-ids:
